Fix horizontal scroll on Design System

--- a/src/elements/custom/table-of-contents.css
+++ b/src/elements/custom/table-of-contents.css
@@ -7,7 +7,6 @@ div[is="table-of-contents"] {
     padding: 0;
 
     & > li {
-      min-inline-size: 30rem;
       padding: 0.23em 0;
 
       &::before {
